# factorizer

./: .gitignore  README.md  app.py  contants.py  main.py  output.py  pyproject.toml  requirements.txt
factorizer/: __init__.py  graph.py  problem.py  utils.py
factorizer/visualization/: blueprint.py  graph.py
tests/: test_graph.py
